chore: Upgrade Angular from 8 to 17